--- a/scss/components/_comments.scss
+++ b/scss/components/_comments.scss
@@ -61,8 +61,13 @@
 
 .comment__action {
   display: flex;
+  justify-content: flex-end;
   align-items: center;
   font-weight: 700;
+
+  > * + * {
+    margin-left: 1rem;
+  }
 }
 
 .comment__delete {
